deploy/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ghost
  namespace: ghost
spec:
  type: ClusterIP
  selector:
    app: ghost
  ports:
  - protocol: TCP
    port: 80
    targetPort: 2368
